Further Refactor to Back-End

--- a/practico_07/app/views/templates/home.html
+++ b/practico_07/app/views/templates/home.html
@@ -88,7 +88,7 @@
             jsonFormData
         });
         const response = await performPostHttpRequest(
-            "/contacts", {
+            "/api/contacts", {
                 "Content-Type": "application/json"
             },
             jsonFormData
