--- a/practico_07/app/views/static/css/home.css
+++ b/practico_07/app/views/static/css/home.css
@@ -4,9 +4,10 @@ body {
 }
 
 nav {
-    margin: 0;
-    padding: 30px 50px;
+    padding: 20px;
     background: #e8e8e8;
+    display: flex;
+    justify-content: center;
 }
 
 nav a {
@@ -15,10 +16,43 @@ nav a {
     text-decoration: none;
 }
 
-.container {
-    padding: 50px;
-}
-
 h1 {
     margin-top: 0;
+}
+
+.container {
+    padding: 20px;
+    text-align: center;
+}
+
+.main {
+    text-align: center;
+}
+
+.main-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+}
+
+.form-input {
+    width: 50%;
+    text-align: left;
+}
+
+.form-row {
+    width: 400px;
+    margin: 0.5em
+}
+
+.form-label {
+    width: 30%;
+    text-align: end;
+    padding-right: 10px;
+}
+
+.form-submit {
+    width: 30%;
+    margin: 10px;
 }
