--- a/practico_07/app/views/templates/home.html
+++ b/practico_07/app/views/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block css %}
-<link href="{{ url_for('static', filename='css/home.css') }}" rel="stylesheet" />
+    <link href="{{ url_for('static', filename='css/home.css') }}" rel="stylesheet" />
 {% endblock %}
 
 {% block content %}
@@ -9,117 +9,43 @@
     <h1>{{title}}</h1>
     <p>{{description}}</p>
 </div>
-<div class="row p-5 justify-content-center">
-    <div class="text-center">
-        <h3 class="text-secondary fw-bolder">NUEVO SOCIO</h3>
-        <form id="nuevoContacto" method="POST" action="">
-            <div class="row m-2">
-                <div class="col-5 text-end">Nombre</div>
-                <div class="col-7 text-start">
-                    <input type="text" name="firstName" id="firstName" required />
-                </div>
-            </div>
-            <div class="row m-2">
-                <div class="col-5 text-end">Apellido</div>
-                <div class="col-7 text-start">
-                    <input type="text" name="lastName" id="lastName" required />
-                </div>
-            </div>
-            <div class="row m-2">
-                <div class="col-5 text-end">Direccion</div>
-                <div class="col-7 text-start">
-                    <input type="text" name="address" id="address" required />
-                </div>
-            </div>
-            <div class="row m-2">
-                <div class="col-5 text-end">Ciudad</div>
-                <div class="col-7 text-start">
-                    <input type="text" name="city" id="city" required />
-                </div>
-            </div>
-            <div class="row m-2">
-                <div class="col-5 text-end">Provincia</div>
-                <div class="col-7 text-start">
-                    <input type="text" name="state" id="state" required />
-                </div>
-            </div>
-            <div class="row m-2">
-                <div class="col-5 text-end">Codigo Postal</div>
-                <div class="col-7 text-start">
-                    <input type="number" name="zipCode" id="zipCode" required />
-                </div>
-            </div>
-            <div class="row m-2">
-                <div class="col-5 text-end">Telefono</div>
-                <div class="col-7 text-start">
-                    <input type="number" name="phone" id="phone" required />
-                </div>
-            </div>
-            <div class="row m-2">
-                <div class="col-5 text-end">Email</div>
-                <div class="col-7 text-start">
-                    <input type="email" name="email" id="email" required />
-                </div>
-            </div>
-            <button id="btnSubmit" type="submit">Confirmar</button>
-        </form>
-    </div>
+
+<div class="row justify-content-center main">
+    <h3 class="text-secondary fw-bolder">NUEVO SOCIO</h3>
+    <form class="main-form" method="POST" action="{{ url_for('api.create') }}" enctype="multipart/form-data">
+        <div class="form-row">
+            <label class="form-label">Nombre</label>
+            <input class="form-input" type="text" name="firstName" id="firstName" required />
+        </div>
+        <div class="form-row">
+            <label class="form-label">Apellido</label>
+            <input class="form-input" type="text" name="lastName" id="lastName" required />
+        </div>
+        <div class="form-row">
+            <label class="form-label">Direccion</label>
+            <input class="form-input" type="text" name="address" id="address" required />
+        </div>
+        <div class="form-row">
+            <label class="form-label">Ciudad</label>
+            <input class="form-input" type="text" name="city" id="city"/>
+        </div>
+        <div class="form-row">
+            <label class="form-label">Provincia</label>
+            <input class="form-input" type="text" name="state" id="state"/>
+        </div>
+        <div class="form-row">
+            <label class="form-label">Codigo Postal</label>
+            <input class="form-input" type="number" name="zipCode" id="zipCode" required />
+        </div>
+        <div class="form-row">
+            <label class="form-label">Telefono</label>
+            <input class="form-input" type="number" name="phone" id="phone" required />
+        </div>
+        <div class="form-row">
+            <label class="form-label">Email</label>
+            <input class="form-input" type="email" name="email" id="email" required />
+        </div>
+        <button class="form-submit" type="submit">Confirmar</button>
+    </form>
 </div>
-<script>
-    const form = document.getElementById("nuevoContacto");
-
-    if (form) {
-        form.addEventListener("submit", (e) => {
-            submitForm(e, form);
-        });
-    }
-    const submitForm = async (e, form) => {
-        e.preventDefault();
-        const data = new FormData(form);
-        console.log([{
-            e
-        }, {
-            data
-        }]);
-        const btnSubmit = document.getElementById("btnSubmit");
-        btnSubmit.disable = true;
-        const jsonFormData = buildJsonFormData(data);
-        console.log({
-            jsonFormData
-        });
-        const response = await performPostHttpRequest(
-            "/api/contacts", {
-                "Content-Type": "application/json"
-            },
-            jsonFormData
-        );
-    };
-
-    const buildJsonFormData = (form) => {
-        const jsonFormData = {};
-        for (const pair of form) {
-            jsonFormData[pair[0]] = pair[1];
-        }
-        return jsonFormData;
-    };
-
-    const performPostHttpRequest = async (fetchLink, headers, body) => {
-        if (!fetchLink || !headers || !body) {
-            throw new Error("one or more POST request parameters was not passed");
-        }
-        try {
-            const rawResponse = await fetch(fetchLink, {
-                method: "POST",
-                headers: headers,
-                body: JSON.stringify(body),
-            });
-            const content = await rawResponse.json();
-            window.alert(content.message);
-            return content;
-        } catch (error) {
-            window.alert(`Error at fetch POST: ${error}`);
-            throw error;
-        }
-    };
-</script>
 {% endblock %}
