--- a/practico_07/templates/index.html
+++ b/practico_07/templates/index.html
@@ -26,7 +26,7 @@
                     <div class="card-body">
                         <div class="div">
                             <div class="button-group">
-                                <a href="/create-equipo" class="btn btn-primary mb-3">Crear equipo</a>
+                                <a href="/create-equipo" class="btn btn-primary mb-3">Agregar Socio</a>
                             </div>
                         </div>
                         <table class="table table-striped">
