practico 07 terminado -  ver tema de IMPORTS

--- a/practico_07/templates/edit.html
+++ b/practico_07/templates/edit.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crear Socio</title>
+    <title>Modificar Socio</title>
     <!-- BOOTSTRAP 4 y JQUERY -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -21,21 +21,22 @@
                 <div class="col-md-12">
                     <div class="card">
                         <div class="card-header">
-                            <h2>Crear socio</h2>
+                            <h2>Modificar socio</h2>
                         </div>
                         <div class="card-body">
-                            <form action="/save-socio" method="POST">
+                            <form action="/update-socio/{{socio.id}}" method="POST">
+                                <input type="hidden" name="id" value="{{socio.id}}">
                                 <div class="form-group">
                                     <label for="nombre">Nombre</label>
-                                    <input type="text" class="form-control" name="nombre">
+                                    <input type="text" class="form-control" name="nombre" value="{{socio.nombre}}">
                                 </div>
                                 <div class="form group">
                                     <label for="apellido">Apellido</label>
-                                    <input type="text" class="form-control" name="apellido">
+                                    <input type="text" class="form-control" name="apellido" value="{{socio.apellido}}">
                                 </div>
                                 <div class="form group">
                                     <label for="dni">DNI</label>
-                                    <input type="text" class="form-control" name="dni">
+                                    <input type="text" class="form-control" name="dni" value="{{socio.dni}}">
                                 </div>
                                 <a href="/" class="btn btn-secondary mt-3">Cancelar</a>
                                 <button type="submit" class="btn btn-primary mt-3">Guardar</button>
