--- a/TPI_Final/templates/layout.html
+++ b/TPI_Final/templates/layout.html
@@ -14,7 +14,7 @@
 
         <div class="container p-2">
             {% block body %}
-
+                <h1>{{ current_user.firstName}}</h1>
             {% endblock%}
         </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
