--- a/TPI_Final/templates/layout.html
+++ b/TPI_Final/templates/layout.html
@@ -15,6 +15,20 @@
         <div class="container p-2">
             {% block body %}
                 <h1>{{ current_user.firstName}}</h1>
+                    <div class="row  m-0  row-cols-1 row-cols-md-4">
+                        {% for product in products%}
+                            <div class="col mb-4">
+                                <div class="card h-100" style="width: 18rem;">
+                                    <img class="card-img-top" src="..." alt="Card image cap">
+                                    <div class="card-body h-50">
+                                        <h5 class="card-title">Card title</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    </div>
+                                </div>
+                            </div>
+                        {% endfor %}
+                    </div>
             {% endblock%}
         </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
