--- a/TPI_Final/templates/partial/_navbar.html
+++ b/TPI_Final/templates/partial/_navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="/">Inicio</a>
+      <a class="navbar-brand" href="{{url_for('auth.home')}}">Inicio</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -10,7 +10,10 @@
             <a class="nav-link active" aria-current="page" href="#">Kayak</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Usuario</a>
+            <a class="nav-link" href="{{url_for('users.getAll')}}">Usuario</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{url_for('roles.getAll')}}">Permiso</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Parches</a>
