--- a/TPI_Final/templates/user/create.html
+++ b/TPI_Final/templates/user/create.html
@@ -1,13 +1,9 @@
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<link rel="stylesheet" href="{{url_for('static', filename='login.css')}}">
-<section id="cover" class="min-vh-100">
-    <!-- <div id="cover-caption"> -->
+{% extends 'layout.html' %}   
+{% block body %}
+<section id="cover" class="min-vh-100 abs-center">
         <div class="container">
-            <!-- <div class="row"> -->
                 <div class="col-xl-8 col-lg-6 col-md-8 col-sm-10 mx-auto">
-                    <h1 class="display-4 py-2 text-truncate  text-center">Crear usuario</h1>
-                    <!-- <div class="px-4"> -->
+                    <h1 class="display-6 py-2 text-truncate  text-center">Crear usuario</h1>
                         <form action="/user/create" method="post"> 
                           {% include 'partial/_message.html'%}
                           <div class="form-group col-md-12 mb-3" *ngIf="!OptionBtn">
@@ -64,14 +60,13 @@
                             </div>
   
                             <div class="float-right mb-3" style="float: right;">
-                              <button formaction="http://stackoverflow.com" class="btn btn-primary mr-3">Cancelar</button>
+                              <a href="{{ url_for('users.getAll') }}" class="btn btn-primary mr-3">Cancelar</a>
                               <button type="submit" class="btn btn-primary">Guardar</button>
                             </div>
                         </form>
-                    <!-- </div> -->
                 </div>
-            <!-- </div> -->
         </div>
     <!-- </div> -->
   </section>
+  {% endblock %}
   
