--- a/TPI_Final/templates/user/list.html
+++ b/TPI_Final/templates/user/list.html
@@ -3,22 +3,28 @@
     <div>
         <table class="table col-xl-6 col-lg-6 col-md-6 col-sm-6 mx-auto mt-3 ">
             {% include 'partial/_message.html'%}
-            <a href="{{ url_for('roles.create') }}"  style="float: right;margin-bottom: 1%;">
-                <button class="btn btn-primary float-right"  >Nueva permision</button>
+            <a href="{{ url_for('users.create') }}"  style="float: right;margin-bottom: 1%;">
+                <button class="btn btn-primary float-right"  >Nueva usuario</button>
             </a>
             <thead class="table-dark">
                 <tr>
                     <th scope="col">Nombre</th>
-                    <th scope="col">Descripcion</th>
+                    <th scope="col">Apellido</th>
+                    <th scope="col">Direccion</th>
+                    <th scope="col">Telefono</th>
+                    <th scope="col">Correo</th>
                     <th scope="col">Accion</th>
                     <th scope="col"></th>
                 </tr>
             </thead>
             <tbody>
-                {% for role in roles%}
+                {% for role in userfilter%}
                     <tr>
-                        <td>{{role.name}}</td>
-                        <td>{{role.description}}</td>
+                        <td>{{role.firstName}}</td>
+                        <td>{{role.lastName}}</td>
+                        <td>{{role.address}}</td>
+                        <td>{{role.phone}}</td>
+                        <td>{{role.mail}}</td>
                         <td>
                             <a href="{{ url_for('roles.update', id=role.id) }}"><i class="fa-solid fa-pencil"></i></a>
                             <a href="{{ url_for('roles.delete', id=role.id) }}"><i class="fa-solid fa-trash-can"></i></a>
