--- a/TPI_Final/templates/layout.html
+++ b/TPI_Final/templates/layout.html
@@ -19,11 +19,11 @@
                         {% for product in products%}
                             <div class="col mb-4">
                                 <div class="card h-100" style="width: 18rem;">
-                                    <img class="card-img-top" src="..." alt="Card image cap">
+                                    <img class="card-img-top" src="{{ url_for('static', filename='img/') }}{{product.url}}" alt="Card image cap">
                                     <div class="card-body h-50">
-                                        <h5 class="card-title">Card title</h5>
+                                        <h5 class="card-title">{{ product.name}}</h5>
                                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                        <a href="#" class="btn btn-primary">Comprar</a>
                                     </div>
                                 </div>
                             </div>
