--- a/TPI_Final/templates/user/list.html
+++ b/TPI_Final/templates/user/list.html
@@ -4,7 +4,7 @@
         <table class="table col-xl-6 col-lg-6 col-md-6 col-sm-6 mx-auto mt-3 ">
             {% include 'partial/_message.html'%}
             <a href="{{ url_for('users.create') }}"  style="float: right;margin-bottom: 1%;">
-                <button class="btn btn-primary float-right"  >Nueva usuario</button>
+                <button class="btn btn-primary float-right"  >Nuevo usuario</button>
             </a>
             <thead class="table-dark">
                 <tr>
