--- a/TPI_Final/templates/partial/_navbar.html
+++ b/TPI_Final/templates/partial/_navbar.html
@@ -7,7 +7,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Kayak</a>
+            <a class= "nav-link active" aria-current="page" href="#">Kayak</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{url_for('users.getAll')}}">Usuario</a>
@@ -19,10 +19,10 @@
             <a class="nav-link" href="#">Parches</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Tipo kayak</a>
+            <a class="nav-link" href="{{url_for('kayaktypes.getAll')}}">Tipo kayak</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Ubicacion</a>
+            <a class="nav-link" href="{{url_for('locations.getAll')}}">Ubicacion</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
